Implement ExpensesActivity structure
The ExpensesActivity can be linked to related Activities once these are implemented.

--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -17,4 +17,15 @@
         tools:listitem="@layout/item_timeline"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onAddExpense"
+        android:contentDescription="@string/add_expense"
+        android:src="@drawable/ic_baseline_add_24"
+
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_gravity="bottom|end"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
