--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ui.payments.PaymentsFragment">
+    tools:context="ui.groups.GroupsFragment">
 
     <TextView
         android:id="@+id/text_groups"
