--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -7,8 +7,15 @@
     android:layout_height="match_parent"
     tools:context="ui.expenses.ExpensesFragment">
 
+    <TextView
+        android:id="@+id/expenses_empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/group_no_expenses"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/expensesRecyclerView"
+        android:id="@+id/expenses_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
@@ -20,7 +27,7 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onAddExpense"
+        android:id="@+id/add_expense_button"
         android:contentDescription="@string/add_expense"
         android:src="@drawable/ic_baseline_add_24"
 
