--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_payments">
-
-    <fragment
-        android:id="@+id/navigation_payments"
-        android:name="de.thm.ap.groupexpenses.ui.payments.UserPaymentsFragment"
-        android:label="@string/payments"
-        tools:layout="@layout/fragment_user_payments" />
+    app:startDestination="@+id/navigation_groups">
 
     <fragment
         android:id="@+id/navigation_groups"
         android:name="de.thm.ap.groupexpenses.ui.groups.GroupsFragment"
         android:label="@string/groups"
         tools:layout="@layout/fragment_groups" />
+
+    <fragment
+        android:id="@+id/navigation_payments"
+        android:name="de.thm.ap.groupexpenses.ui.payments.UserPaymentsFragment"
+        android:label="@string/payments"
+        tools:layout="@layout/fragment_user_payments" />
 
     <fragment
         android:id="@+id/navigation_statistics"
