--- a/app/src/main/res/layout/activity_expense_form.xml
+++ b/app/src/main/res/layout/activity_expense_form.xml
@@ -73,11 +73,11 @@
             android:autofillHints="date, datum" />
 
         <ImageButton
+            android:id="@+id/button_select_expense_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:tooltipText="@string/expenses_date_button"
             android:contentDescription="@string/expenses_date_button"
-            android:onClick="onSetDateToCurrentDate"
             android:src="@drawable/ic_baseline_today_black_24"/>
 
     </LinearLayout>
@@ -124,7 +124,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/save"
-        android:onClick="onSave"/>
+        android:text="@string/save"/>
 
 </LinearLayout>
