Add functionality to ExpenseFormActivity

--- a/app/src/main/res/layout/activity_expense_form.xml
+++ b/app/src/main/res/layout/activity_expense_form.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -68,9 +69,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="date"
+            android:focusable="false"
+            android:inputType="none"
             android:hint="@string/expenses_date_hint"
-            android:autofillHints="date, datum" />
+            tools:ignore="TextFields"/>
 
         <ImageButton
             android:id="@+id/button_select_expense_date"
