--- a/app/src/main/res/menu/expenses.xml
+++ b/app/src/main/res/menu/expenses.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RecordsActivity">
+    tools:context=".MainActivity">
 
     <item
         android:id="@+id/action_jump_to_current_date"
