--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="ui.settings.SettingsFragment">
 
+    <!-- TODO -->
+
     <TextView
         android:id="@+id/text_settings"
         android:layout_width="match_parent"
