--- a/app/src/main/res/layout/activity_payment_form.xml
+++ b/app/src/main/res/layout/activity_payment_form.xml
@@ -4,74 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
-    <!-- COST -->
-    <TextView
-        android:layout_width="wrap_content"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/payment"/>
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/payment_value"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.95"
-            android:inputType="numberDecimal"
-            android:hint="@string/payment_hint"
-            android:importantForAutofill="no" />
-
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
+        <!-- COST -->
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".05"
-
-            android:textSize="25sp"
-            android:text="@string/currency_euro"/>
-
-    </LinearLayout>
-
-
-    <!-- DATE -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/expenses_date"/>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/payment_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:focusable="false"
-            android:inputType="none"
-            android:hint="@string/payment_date_hint"
-            tools:ignore="TextFields"/>
-
-        <ImageButton
-            android:id="@+id/button_select_payment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/expenses_date_button"
-            android:src="@drawable/ic_baseline_today_black_24"/>
+            android:text="@string/payment"/>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/payment_value"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.95"
+                android:inputType="numberDecimal"
+                android:hint="@string/payment_hint"
+                android:importantForAutofill="no" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".05"
+
+                android:textSize="25sp"
+                android:text="@string/currency_euro"/>
+
+        </LinearLayout>
+
+
+        <!-- DATE -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/expenses_date"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/payment_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:focusable="false"
+                android:inputType="none"
+                android:hint="@string/payment_date_hint"
+                tools:ignore="TextFields"/>
+
+            <ImageButton
+                android:id="@+id/button_select_payment_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/expenses_date_button"
+                android:src="@drawable/ic_baseline_today_black_24"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/payment_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/button_add_payment"/>
     </LinearLayout>
-
-    <Button
-        android:id="@+id/payment_save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/button_add_payment"/>
 </LinearLayout>
