--- a/app/src/main/res/layout/activity_expense_form.xml
+++ b/app/src/main/res/layout/activity_expense_form.xml
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/expenses"/>
+            android:text="@string/costs"/>
 
         <LinearLayout
             android:orientation="horizontal"
