--- a/app/src/main/res/layout/fragment_user_statistics.xml
+++ b/app/src/main/res/layout/fragment_user_statistics.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="ui.statistics.StatisticsFragment"
+        tools:context="ui.statistics.UserStatisticsFragment"
         android:padding="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
