--- a/app/src/main/res/menu/expenses.xml
+++ b/app/src/main/res/menu/expenses.xml
@@ -3,25 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".ui.expenses.ExpensesFragment">
 
     <item
         android:id="@+id/action_jump_to_current_date"
         android:icon="@drawable/ic_baseline_today_24"
+        android:orderInCategory="0"
         app:showAsAction="always"
         android:title="@string/jump_to_current_date"/>
-    <item
-        android:id="@+id/action_stats"
-        android:icon="@drawable/ic_baseline_show_chart_24"
-        app:showAsAction="ifRoom"
-        android:title="@string/stats"/>
-    <item
-        android:id="@+id/action_edit"
-        app:showAsAction="never"
-        android:title="@string/edit"/>
-    <item
-        android:id="@+id/action_invite"
-        app:showAsAction="never"
-        android:title="@string/invite"/>
 
 </menu>
