--- a/app/src/main/res/layout/item_group_member.xml
+++ b/app/src/main/res/layout/item_group_member.xml
@@ -26,8 +26,35 @@
             android:id="@+id/item_group_member_role"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_toStartOf="@+id/item_group_member_button"
+            android:layout_marginTop="3dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             tools:text="Admin"/>
+
+        <LinearLayout
+            android:id="@+id/item_group_member_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true">
+
+            <ImageButton
+                android:id="@+id/item_group_member_leave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/leave_group"
+                android:background="@drawable/ic_baseline_exit_24"
+                android:visibility="visible"/>
+
+            <ImageButton
+                android:id="@+id/item_group_member_kick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/kick_member"
+                android:background="@drawable/ic_baseline_person_remove_24"
+                android:visibility="gone"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
