--- a/app/src/main/res/layout/activity_group_form.xml
+++ b/app/src/main/res/layout/activity_group_form.xml
@@ -27,7 +27,10 @@
         <EditText
             android:id="@+id/group_form_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:hint="@string/group_form_name_hint"/>
 
         <Button
             android:id="@+id/button_create_group"
