Adjust achievement material card view border radius

--- a/app/src/main/res/layout/item_achievement.xml
+++ b/app/src/main/res/layout/item_achievement.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            app:cardCornerRadius="0dp"
             app:cardBackgroundColor="@{achievement.isShamement ? @color/shamements_card_background : @color/achievements_card_background}"
             app:contentPadding="15dp">
 
