Add recurring payments textual representation to ExpensesDetailActivity

--- a/app/src/main/res/layout/activity_expenses_detail.xml
+++ b/app/src/main/res/layout/activity_expenses_detail.xml
@@ -96,6 +96,7 @@
             </FrameLayout>
 
             <FrameLayout
+                android:id="@+id/recurringSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
