--- a/app/src/main/res/layout/activity_payment_form.xml
+++ b/app/src/main/res/layout/activity_payment_form.xml
@@ -37,6 +37,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.95"
                 android:inputType="numberDecimal"
+                android:maxLength="9"
                 android:hint="@string/payment_hint"
                 android:importantForAutofill="no" />
 
